--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         id: version_step
         run: | 
           echo "##[set-output name=version;]VERSION=${GITHUB_REF#$"refs/tags/v"}"
-          echo "##[set-output name=version_tag;]$GITHUB_REPOSITORY:${GITHUB_REF#$"refs/tags/v"}"
+          echo "##[set-output name=version_tag;]$GITHUB_REPOSITORY: ${GITHUB_REF#$"main"}"
           echo "##[set-output name=latest_tag;]$GITHUB_REPOSITORY:latest"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2.0.0
@@ -29,7 +29,7 @@ jobs:
           echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag  }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       - name: Build and push Docker images
         id: docker_build
-        uses: docker/build-push-action@v2.3.0
+        uses: docker/build-push-action@v3.0.0
         with:
           push: true
           tags: |
