--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         id: version_step
         run: | 
           echo "##[set-output name=version;]VERSION=${GITHUB_REF#$"refs/tags/v"}"
-          echo "##[set-output name=version_tag;]$GITHUB_REPOSITORY: ${GITHUB_REF#$"main"}"
+          echo "##[set-output name=version_tag;]$GITHUB_REPOSITORY: main"
           echo "##[set-output name=latest_tag;]$GITHUB_REPOSITORY:latest"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2.0.0
