--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v3.0.0
         with:
+          context: .
+          file: ./Dockerfile
           push: true
-          tags: |
-            ${{env.VERSION_TAG}}
-            ${{env.LASTEST_TAG}}
-          build-args: |
-            ${{steps.version_step.outputs.version}}
+          tags: damocleses/wordleServer:v2
