--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,12 @@ jobs:
           push: true
           tags: damocleses/wordle-server:v2
       - name: SSH Action
-        uses: invi5H/ssh-action@v1.0.0
+        uses: appleboy/ssh-action@v0.1.4
         with:
-          NAME: tencent
-          SSH_USER: root
-          SSH_HOST: ${{ secrets.HOST }}
-          SSH_KEY: ${{ secrets.HOST_SSH_KEY }}
+          name: tencent
+          username: root
+          host: ${{ secrets.HOST }}
+          key: ${{ secrets.HOST_SSH_KEY }}
           script: |
             docker container stop wordle-server
             docker conttainer rm wordle-server
