--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    pathes:
+      - 'version.txt'
+      - 'package.json'
 jobs:
   test:
     runs-on: self-hosted
