--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
     paths:
       - 'version.txt1'
-      - 'package.json'
+      - 'package.json1'
 jobs:
   test:
     runs-on: self-hosted
