--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'version.txt'
-      - 'package.json'
+    #paths:
+     # - 'version.txt'
+     # - 'package.json'
 jobs:
   test:
     runs-on: self-hosted
@@ -14,8 +14,8 @@ jobs:
         id: read_version_file
         uses: komorebitech/read-files-action@v1.5
         with:
-          files: '["/version.txt"]'
-          pattern: 'version:'
+          files: '["/wordleServer/version.txt"]'
+          pattern: 'version'
       - name: echo version
         run: |
           echo "${{ steps.read_version_file.outputs.content }}"
