--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         id: read_version_file
         uses: komorebitech/read-files-action@v1.5
         with:
-          files: '["/wordleServer/version.txt"]'
+          files: '["version.txt"]'
           pattern: 'version'
       - name: echo version
         run: |
