--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ on:
   push:
     branches:
       - main
-    #paths:
-     # - 'version.txt'
-     # - 'package.json'
+    paths:
+      - 'version.txt'
+      - 'package.json'
 jobs:
   test:
     runs-on: self-hosted
@@ -14,7 +14,7 @@ jobs:
         id: read_version_file
         uses: komorebitech/read-files-action@v1.5
         with:
-          files: '["/version.txt"]'
+          files: '["version.txt"]'
           pattern: 'version'
       - name: echo version
         run: |
