--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,17 @@ jobs:
   test:
     runs-on: self-hosted
     steps:
-      - name: Read Version File
-        id: read_version_file
-        uses: juliangruber/read-file-action@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: lots0logs/gh-action-get-changed-files@2.1.4
+        id: get_changed_files
         with:
-          path: ./package.json
+          token: "${{secrets.GITHUB_TOKEN}}"
+      - uses: komorebitech/read-files-action@v1.5
+        id: read_migration_files
+        with:
+          files: ${{ steps.get_changed_files.outputs.added }}
+          pattern: 'migrations'
       - name: echo version
         run: |
           echo "${{ steps.read_version_file.outputs.content }}"
