--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         id: read_migration_files
         with:
           files: ${{ steps.get_changed_files.outputs.added }}
-          pattern: 'migrations'
+          pattern: 'version'
       - name: echo version
         run: |
-          echo "${{ steps.read_version_file.outputs.content }}"
+          echo "${{ steps.read_migration_files.outputs.content }}"
