--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,24 +3,20 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'version.txt'
-      - 'package.json'
+    #paths:
+    #  - 'version.txt'
+    #  - 'package.json'
 jobs:
   test:
     runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: lots0logs/gh-action-get-changed-files@2.1.4
-        id: get_changed_files
-        with:
-          token: "${{secrets.GITHUB_TOKEN}}"
       - uses: komorebitech/read-files-action@v1.5
         id: read_migration_files
         with:
-          files: ${{ steps.get_changed_files.outputs.added }}
-          pattern: 'version'
+          files: ''
+          pattern: 'version.txt'
       - name: echo version
         run: |
           echo "${{ steps.read_migration_files.outputs.content }}"
