--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           files: '["./version.txt"]'
           pattern: 'version'
+      - name: prepare version
+        id: GET_VERSION
+        run: |
+          echo VERSION=$(echo ${{ steps.version_step.outputs.content }} | sed -n "/^version:/p" | cut -d ":" -f2 | tr) >> $GITHUB_ENV
       - name: echo version
         run: |
-          echo "${{ steps.read_migration_files.outputs.content }}" | sed -n "/^version:/p"
+          echo "${{ env.VERSION }}"
