--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: prepare version
         id: GET_VERSION
         run: |
-          echo VERSION=$(echo ${{ steps.version_step.outputs.content }} | sed -n "/^version:/p" | cut -d ":" -f2 | tr) >> $GITHUB_ENV
+          echo VERSION=$(echo ${{ steps.version_step.outputs.content }} | sed -n "/^version:/p" | cut -d ":" -f2 | tr -s '\n' ) >> $GITHUB_ENV
       - name: echo version
         run: |
           echo "${{ env.VERSION }}"
