--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,11 @@
-name: test
-on:
+name: go-docker
+on: 
   push:
     branches:
       - main
-    #paths:
-    #  - 'version.txt'
-    #  - 'package.json'
 jobs:
-  test:
-    runs-on: self-hosted
+  deploy:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -18,9 +15,34 @@ jobs:
           files: '["./version.txt"]'
           pattern: 'version'
       - name: prepare version
-        id: GET_VERSION
+        id: SET_VERSION
         run: |
           echo VERSION=$(echo "${{ steps.read_migration_files.outputs.content }}" | sed -n "/^version:/p" | cut -d ":" -f2 | awk '$1=$1') >> $GITHUB_ENV
-      - name: echo version
-        run: |
-          echo "${{ env.VERSION }}"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.0.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2.0.0
+      - name: Login to DockerHub
+        uses: docker/login-action@v2.0.0
+        with:
+          username: ${{ secrets.DOCKER_USER_NAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      - name: Build and push Docker images
+        id: docker_build
+        uses: docker/build-push-action@v3.0.0
+        with:
+          push: true
+          tags: damocleses/wordle-server:${{ env.VERSION }}
+      - name: SSH Action
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          name: tencent
+          username: root
+          host: ${{ secrets.HOST }}
+          key: ${{ secrets.HOST_SSH_KEY }}
+          script: |
+            docker container stop wordle-server
+            docker conttainer rm wordle-server
+            docker pull damocleses/wordle-server:${{ env.VERSION }}
+            docker run -d --name wordler-server -p 7767:7767 damocleses/wordle-server:${{ env.VERSION }}
+            
