--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: check container exists
         id: container_exits
-        run: echo '##[set-output name=container;]' docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p"
+        run: echo '##[set-output name=container;]$((docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p"))'
       - name: remove container
         if: ${{ steps.container_exits.outputs.container }} == 'wordle-server'
         run: |
