--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
         id: container_exits
         run: echo '::set-output name=container::$((echo docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p"))'
       - name: echo container_exits
-        run: echo "${{steps.container_exits.outputs.container }}"
+        run: echo '${{steps.container_exits.outputs.container }}'
       - name: remove container
-        if: (echo "${{ steps.container_exits.outputs.container }}") == "wordle-server"
+        if: (echo '${{ steps.container_exits.outputs.container }}') == "wordle-server"
         run: |
           docker container stop wordle-server
           docker container rm wordle-server
