--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,12 @@ jobs:
       - name: echo container_exits
         run: echo ${{ steps.container_exits.outputs.container }}
       - name: remove container
-        if: ${{ steps.container_exits.outputs.container }} == "wordle-server1"
+        if: ${{ steps.container_exits.outputs.container }} == "wordle-server"
         run: |
           docker container stop wordle-server
           docker container rm wordle-server
       - name: Deploy
         run: |
-          docker container stop wordle-server
-          docker container rm wordle-server
           docker pull damocleses/wordle-server:${{ env.VERSION }}
           docker run -d --name wordle-server -p 7767:7767 damocleses/wordle-server:${{ env.VERSION }}
             
