--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
         uses: docker/setup-qemu-action@v2.0.0
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.0.0
+        with:
+          config-inline: |
+            [registry."docker.io"]
+              mirrors = ["https://yxzrazem.mirror.aliyuncs.com"]
       - name: Login to DockerHub
         uses: docker/login-action@v2.0.0
         with:
@@ -33,6 +37,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v3.0.0
         with:
+          context: .
           push: true
           tags: damocleses/wordle-server:${{ env.VERSION }}
       - name: check container exists
