--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           config-inline: |
             [registry."docker.io"]
-              mirrors = ["https://yxzrazem.mirror.aliyuncs.com"]
+              mirrors = ["https://tk9j29jc.mirror.aliyuncs.com"]
       - name: Login to DockerHub
         uses: docker/login-action@v2.0.0
         with:
