--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,26 +20,10 @@ jobs:
         id: SET_VERSION
         run: |
           echo VERSION=$(echo "${{ steps.read_migration_files.outputs.content }}" | sed -n "/^version:/p" | cut -d ":" -f2 | awk '$1=$1') >> $GITHUB_ENV
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2.0.0
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.0.0
-        with:
-          config-inline: |
-            [registry."docker.io"]
-              mirrors = ["https://tk9j29jc.mirror.aliyuncs.com"]
-      - name: Login to DockerHub
-        uses: docker/login-action@v2.0.0
-        with:
-          username: ${{ secrets.DOCKER_USER_NAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-      - name: Build and push Docker images
-        id: docker_build
-        uses: docker/build-push-action@v3.0.0
-        with:
-          context: .
-          push: true
-          tags: damocleses/wordle-server:${{ env.VERSION }}
+      - name: push docker
+        run: |
+          docker build -t damocleses/wordle-server:${{ env.VERSION }} .
+          docker push damocleses/wordle-server:${{ env.VERSION }}
       - name: check container exists
         id: container_exits
         run: echo '::set-output name=container::$(docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p")'
