--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,12 @@ jobs:
           docker push damocleses/wordle-server:${{ env.VERSION }}
       - name: check container exists
         id: container_exits
-        run: echo '::set-output name=container::$(docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p")'
+        run: |
+          echo CONTAINER=$(docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p" | awk '$1=$1') >> $GITHUB_ENV
       - name: echo container_exits
-        run: echo ${{ steps.container_exits.outputs.container }}
+        run: echo ${{ env.CONTAINER }}
       - name: remove container
-        if: ${{ steps.container_exits.outputs.container }} == "wordle-server"
+        if: ${{ env.CONTAINER }} == "wordle-server"
         run: |
           docker container stop wordle-server
           docker container rm wordle-server
