--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: echo container_exits
         run: echo ${{ env.CONTAINER }}
       - name: remove container
-        if: 1 == 2
+        if: ${{ env.CONTAINER == "wordle-server" }}
         run: |
           docker container stop wordle-server
           docker container rm wordle-server
