--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
         run: |
           echo CONTAINER=$(docker container ls --format "{{.Names}}" | sed -n "/wordle-server/p" | awk '$1=$1') >> $GITHUB_ENV
       - name: echo container_exits
-        run: echo ${{ env.CONTAINER }}
+        run: echo '${{ env.CONTAINER }}'
       - name: remove container
-        if: (${{ env.CONTAINER }} == "wordle-server")
+        if: ('${{ env.CONTAINER }}' == 'wordle-server')
         run: |
           docker container stop wordle-server
           docker container rm wordle-server
